Ingress-Resource/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sock-shop
  name: sock-shop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
 # this should be uncommented if ingress used in "regular" cluster
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sock-shop.jaymiebelz.me
#    - voting-app.jaymiebelz.me
    secretName: jaymiebelz-tls

  rules:
  - host: sock-shop.jaymiebelz.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: front-end
             port:
               number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
#    - sock-app.jaymiebelz.me
    - voting-app.jaymiebelz.me
    secretName: jaymiebelz-tls
  rules:
  - host: voting-app.jaymiebelz.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: azure-vote-front
             port:
               number: 80
